@@ -43,6 +43,8 @@
   * Make dul-daemon a trivial wrapper around server functionality.
     (Dave Borowitz)
 
+  * Move reference WSGI handler to web.py. (Dave Borowitz)
+
 
 0.6.0	2010-05-22
 
